# NECallKit

./: .gitignore  README-en.md  README-zh_CN.md  README.md
Android/: README.md  gradle.properties
Android/app/: build.gradle  proguard-rules.pro
Android/call-ui/: README.md  build.gradle
Android/gradle/: libs.versions.toml
Electron/: README.md
Electron/example-vue3/: README.md  package.json
Electron/example-vue3/call-kit-ui/: CHANGELOG.md  README.md  index.d.ts  package.json
Electron/example-vue3/github/: README.md  package.json  runtime-env.d.ts  runtime-env.js
Electron/example-vue3/src/: main.js  preload-host.js  preload.js  runtime-env.js
Flutter/: .pubignore  CHANGELOG-zh.md  CHANGELOG.md  README-en.md  README-zh.md  README.md  analysis_options.yaml  pubspec.yaml  pubspec_ohos.yaml
Flutter/android/: build.gradle
Flutter/callkit/: .gitignore  .pubignore  CHANGELOG.md  README.md  analysis_options.yaml  automation_flutter.xlsx  pubspec.yaml  pubspec_ohos.yaml
Flutter/callkit/android/: build.gradle  gradle.properties
Flutter/callkit/example/: pubspec.yaml  pubspec_ohos.yaml
Flutter/callkit/ios/: netease_callkit.podspec
Flutter/callkit/lib/: netease_callkit.dart
Flutter/callkit/macos/: netease_callkit.podspec
Flutter/callkit/native_artifacts/: manifest.cmake
Flutter/callkit/ohos/: index.ets  oh-package.json5
Flutter/callkit/pigeon/: messages.dart  run_pigeon.sh
Flutter/callkit/scripts/: package_macos_desktop_sdk.py  prepare_macos_desktop.py
Flutter/callkit/test/: group_call_delegate_test.dart  group_call_engine_test.dart  group_call_pigeon_test.dart
Flutter/callkit/windows/: CMakeLists.txt  callkit_plugin.cpp  callkit_plugin.h  callkit_plugin_c_api.cpp  desktop_native_artifacts.cmake
Flutter/callkit/windows/include/netease_callkit/: callkit_plugin.h  callkit_plugin_c_api.h
Flutter/example/: .metadata  README.md  l10n.yaml  pubspec.yaml  pubspec_ohos.yaml
Flutter/example/android/: build.gradle  dependencies.txt  gradle.properties  settings.gradle
Flutter/ios/: netease_callkit_ui.podspec
Flutter/lib/: ne_callkit_ui.dart
Flutter/macos/: netease_callkit_ui.podspec
Flutter/ohos/: PERMISSION_GUIDE.md  index.ets  oh-package.json5
Flutter/windows/: CMakeLists.txt  callkit_ui_plugin.cpp  callkit_ui_plugin.h  callkit_ui_plugin_c_api.cpp
Flutter/windows/include/netease_callkit_ui/: call_kit_u_i_plugin.h  callkit_ui_plugin_c_api.h
HarmonyOS/: .gitignore  INTEGRATION_GUIDE.md  PUSH_CONFIG_GUIDE.md  README.md  build-profile.json5  oh-package.json5  package-lock.json
HarmonyOS/AppScope/: app.json5
HarmonyOS/ByteEffect/: Index.ets  find_dir.bat  oh-package-lock.json5  oh-package.json5
HarmonyOS/FaceUnity/: Index.ets  build-profile.json5  find_dir.sh  oh-package-lock.json5  oh-package.json5
HarmonyOS/FaceUnity/src/main/cpp/: CMakeLists.txt  log.h  napi_base.h  napi_init.cpp
HarmonyOS/FaceUnity/src/main/cpp/beauty/: authpack-ohos-wy.h  fu_video_constants.h  version.h  video_fu_render.cpp  video_fu_render.h
HarmonyOS/FaceUnity/src/main/cpp/types/libfaceunity/: Index.d.ts  oh-package.json5
HarmonyOS/callkit_ui/: .gitignore  BuildProfile.ets  CHANGELOG.md  Index.ets  LICENSE  README.md  obfuscation-rules.txt  oh-package-lock.json5  oh-package.json5  package-lock.json  package.json  tsconfig.json
HarmonyOS/entry/: oh-package-lock.json5  oh-package.json5
HarmonyOS/hvigor/: hvigor-config.json5
MiniProgram/: .gitignore  README.md  package-lock.json  package.json  project.config.json  project.private.config.json  tsconfig.json
MiniProgram/miniprogram/: app.json  app.ts
MiniProgram/typings/: index.d.ts
Web/: README.md  tsconfig.json
Web/basic-react/: .gitignore  .umirc.ts  package-lock.json  package.json  tsconfig.json
Web/basic-vue3/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
Web/call-kit/: CHANGELOG.md  README.md  README.tsdoc.md  package.json  rollup.config.js  tsconfig.json
docs/: flutter-desktop-integration-guide.md
iOS/: Podfile
iOS/NLiteAVDemo/: AppDelegate.m  AppKey.h  Info.plist  PrefixHeader.pch
iOS/NLiteAVDemo.xcodeproj/: project.pbxproj
uni-app/NECallKit-Miniprogram/: App.vue  README.md  manifest.json  package.json  pages.json
uni-app/NECallKit-app/: API Documentation.md  CHANGELOG.md  QUICK_START.md  README.md  manifest.json  pages.json
uni-app/NECallKit-uni-im-app/: README.md  manifest.json  pages.json
uni-app/NECallkit-app-uts/: API参考.md  App.vue  CHANGELOG.md  README.md  config.js  main.js  manifest.json  nim.js  package-lock.json  package.json  pages.json
uni-app/NECallkit-uni-app-x/: App.uvue  index.html  main.uts  manifest.json  pages.json
uni-app/NECallkit-uni-app-x/uni_modules/Netease-Call/utssdk/app-ios/Frameworks/NIMSDK.framework/: CMakeLists.txt  Info.plist  unexported.symbols
uni-app/NECallkit-uni-app-x/uni_modules/Netease-Call/utssdk/app-ios/Frameworks/NIMSDK.framework/Headers/: DataStructureConverter.h  NIMAIManagerProtocol.h  NIMAddCollectParams.h  NIMAddStickTopSessionParams.h  NIMAntiSpamOption.h  NIMApnsManagerProtocol.h  NIMAsymEncryptionOption.h  NIMAudioObject.h  NIMBatchDeleteMessagesOption.h  NIMChatExtendBasicInfo.h  NIMChatExtendManagerProtocol.h  NIMChatManagerProtocol.h  NIMChatroomCdnTrackInfo.h  NIMChatroomEnterRequest.h  NIMChatroomManagerProtocol.h  NIMChatroomMember.h  NIMChatroomMemberRequest.h  NIMChatroomNotificationContent.h  NIMChatroomQueueRequest.h  NIMChatroomTagRequest.h  NIMChatroomUpdateRequest.h  NIMCollectQueryOptions.h  NIMConversationManagerProtocol.h  NIMCreateTeamOption.h  NIMCustomizedAPIManagerProtocol.h  NIMDatabaseException.h  NIMDeleteRecentSessionOption.h  NIMEncryptionConfig.h  NIMFileObject.h  NIMGetMessagesByTagsParam.h  NIMGlobalDefs.h  NIMIncompleteSessionInfo.h  NIMIndexManagerProtocol.h  NIMLogDesensitizationConfig.h  NIMLoginClient.h  NIMLoginManagerProtocol.h  NIMMediaManagerProtocol.h  NIMMessage.h  NIMMessageAIConfig.h  NIMMessagePinItem.h  (+111 more)
uni-app/NECallkit-uni-app-x/uni_modules/Netease-Call/utssdk/app-ios/Frameworks/NIMSDK.framework/NEZQFPSupport.bundle/: grow
(+1517 files in other folders)
